# workspace

./: a.py  record_st.cpp  sensitivity.xlsx
arcsim/: Makefile  log.txt  record_be  record_be.cpp
arcsim/conf/: bend.json  dress.json  fold.json  fold2.json  mot.json
arcsim/dependencies/include/: taucs_config_tests.h
arcsim/dependencies/taucs/config/: darwin.mk
arcsim/materials/: camel-ponte-roma1.json
arcsim/obs/: obs_000026.mtl
arcsim/out1/: conf.json  timing
arcsim/out2/: conf.json  timing
arcsim/out3/: 0001obs01.txt  0001obs02.txt  0002obs01.txt  0002obs02.txt  0003obs01.txt  0003obs02.txt  0004obs01.txt  0004obs02.txt  0005obs01.txt  0005obs02.txt  0006obs01.txt  0006obs02.txt  0007obs01.txt  0007obs02.txt  0008obs01.txt  0008obs02.txt  0009obs01.txt  0009obs02.txt  0010obs01.txt  0010obs02.txt  0011obs01.txt  0011obs02.txt  0012obs01.txt  0012obs02.txt  0013obs01.txt  0013obs02.txt  0014obs01.txt  0014obs02.txt  0015obs01.txt  0015obs02.txt  0016obs01.txt  0016obs02.txt  0017obs01.txt  0017obs02.txt  0018obs01.txt  0018obs02.txt  0019obs01.txt  0019obs02.txt  0020obs01.txt  0020obs02.txt  (+463 more)
arcsim/src/: adaptiveCloth.vcxproj.filters  collision.cpp  collisionutil.cpp  conf.cpp  display.cpp  displayphysics.cpp  displayreplay.cpp  magic.hpp  mesh.cpp  obstacle.cpp  obstacle.hpp  pcgsolver.cpp  pcgsolver.hpp  popfilter.cpp  refinemesh.hpp  separate.cpp  separateobs.cpp  sparse.hpp  tags  util.hpp
arcsim/src copy/: io.cpp  io.hpp  sparse.hpp
arcsim_killdevil/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  changeLog.txt  cmake_install.cmake
arcsim_killdevil/adaptiveCloth/: adaptiveCloth.vcproj  adaptiveCloth.vcproj.vspscc  auglag.cpp  cloth.hpp  dynamicremesh.cpp  handle.cpp  handle.hpp  main.cpp  physics.cpp  runphysics.cpp  runphysics.hpp  trustregion.cpp
arcsim_killdevil/adaptiveCloth_backup/: adaptiveCloth.vcxproj  bvh.cpp  bvh.hpp  conf.cpp  displayreplay.cpp  io.cpp  lsnewton.cpp  main.cpp  physics.hpp  refinemesh.cpp  runphysics.cpp  simulation.cpp
arcsim_killdevil/cmake/: FindCBLAS.cmake  FindMKL.cmake
arcsim_killdevil/conf/: flag copy.json  mot.json  sleeve_distributedframes.json  sleeve_profiling.json  sphere_distributedframes.json
arcsim_killdevil/dependencies/: Makefile
arcsim_killdevil/inc/GL/: glut.h
arcsim_killdevil/jsoncpp/makefiles/vs71/: UpgradeLog.XML  UpgradeLog.htm  jsoncpp.sln  jsontest.vcxproj  lib_json.vcxproj  test_lib_json.vcxproj
arcsim_killdevil/jsoncpp/makefiles/vs71/x64/Debug/: BuildLog.htm  json_libmtd.lib  json_vc71_libmtd.lib  mt.dep  test_lib_json.ilk  vc120.idb  vc90.idb
arcsim_killdevil/jsoncpp/makefiles/vs71/x64/Release/: BuildLog.htm  json_libmt.lib  json_libmtd.lib  json_value.asm  json_vc71_libmt.lib  json_writer.asm  mt.dep  vc90.idb
arcsim_killdevil/lib/: json_libmt.lib  json_libmtd.lib
arcsim_killdevil/obs/: obs_000036.mtl
arcsim_killdevil/png/lib/: libpng.lib
blender/: blender_utils.py  matrix_utils.py  render_cloth.py  run_blender.sh  test.blend  test.blend1
classification/: preprocess.cpp  train.cpp  uniform.cpp
